--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -44,6 +44,25 @@ ARG HOST
 ARG PORT
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
+ARG AWS_REGION
+ARG AWS_S3_BUCKET
+ARG CLOUDINARY_API_KEY
+ARG CLOUDINARY_API_SECRET
+ARG CLOUDINARY_CLOUD_NAME
+ARG MAIL_FROM_ADDRESS
+ARG MAIL_HOST
+ARG MAIL_PORT
+ARG MAIL_USERNAME
+ARG MAIL_PASSWORD
+ARG ALLOW_SUPER_ADMIN_ROLE
+ARG GOOGLE_CALLBACK_URL
+ARG FACEBOOK_GRAPH_VERSION
+ARG FACEBOOK_CALLBACK_URL
+ARG UNLEASH_APP_NAME
+ARG UNLEASH_API_URL
+ARG UNLEASH_INSTANCE_ID
+ARG UNLEASH_REFRESH_INTERVAL
+ARG UNLEASH_METRICS_INTERVAL
 
 FROM node:16-alpine3.14 AS dependencies
 
@@ -167,6 +186,25 @@ ENV PORT=${PORT:-5500}
 ENV DEMO=${DEMO:-false}
 ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
 ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+ENV AWS_REGION=${AWS_REGION}
+ENV AWS_S3_BUCKET=${AWS_S3_BUCKET}
+ENV CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+ENV CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+ENV CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+ENV MAIL_FROM_ADDRESS=${MAIL_FROM_ADDRESS}
+ENV MAIL_HOST=${MAIL_HOST}
+ENV MAIL_PORT=${MAIL_PORT}
+ENV MAIL_USERNAME=${MAIL_USERNAME}
+ENV MAIL_PASSWORD=${MAIL_PASSWORD}
+ENV ALLOW_SUPER_ADMIN_ROLE=${ALLOW_SUPER_ADMIN_ROLE}
+ENV GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}
+ENV FACEBOOK_GRAPH_VERSION=${FACEBOOK_GRAPH_VERSION}
+ENV FACEBOOK_CALLBACK_URL=${FACEBOOK_CALLBACK_URL}
+ENV UNLEASH_APP_NAME=${UNLEASH_APP_NAME}
+ENV UNLEASH_API_URL=${UNLEASH_API_URL}
+ENV UNLEASH_INSTANCE_ID=${UNLEASH_INSTANCE_ID}
+ENV UNLEASH_REFRESH_INTERVAL=${UNLEASH_REFRESH_INTERVAL}
+ENV UNLEASH_METRICS_INTERVAL=${UNLEASH_METRICS_INTERVAL}
 
 # 5500 for HTTP
 # 2087 for HTTPS
