fix: env template default variables

--- a/packages/core/.env.template
+++ b/packages/core/.env.template
@@ -1,6 +1,7 @@
 # Don't forget to update src/env.ts on changes
 
-NODE_ENV=production|development|test
+# NODE_ENV: production|development|test
+NODE_ENV=development
 
 HTTPPORT=5500
 HTTPSPORT=2087
@@ -58,7 +59,8 @@ WEB_CONCURRENCY=1
 
 IP_STACK_API_KEY=[IP_STACK_SERVICE_API_KEY_VALUE]
 
-LOG_LEVEL= trace|debug|info|warn|error|fatal
+# LOG_LEVEL: trace|debug|info|warn|error|fatal
+LOG_LEVEL=info
 
 # Apollo Engine Key (optional, see https://www.apollographql.com/docs/platform/schema-registry)
 ENGINE_API_KEY=service:XXXXX:XXXXXXXX
