--- a/packages/shop-web-angular/.env.template
+++ b/packages/shop-web-angular/.env.template
@@ -21,7 +21,7 @@ NO_INTERNET_LOGO=assets/img/ever-logo.svg
 DELIVERY_TIME_MIN=30
 DELIVERY_TIME_MAX=60
 
-# For maintenance micro service. Ever maintanance API URL: https://maintenance.ever.co/status
+# For maintenance micro service. Ever maintenance API URL: https://maintenance.ever.co/status
 SETTINGS_APP_TYPE=shop-web
 SETTINGS_MAINTENANCE_API_URL=
 
