--- a/packages/shop-mobile-expo/app.json
+++ b/packages/shop-mobile-expo/app.json
@@ -1,7 +1,8 @@
 {
 	"expo": {
-		"name": "@ever-platform/shop-mobile-expo",
-		"slug": "shop-mobile-expo",
+		"name": "ever-demand-shop-mobile-expo",
+		"slug": "ever-demand-shop-mobile-expo",
+		"owner": "everco",
 		"description": "Ever Shop Mobile App build with expo",
 		"version": "0.4.3",
 		"orientation": "portrait",
@@ -18,6 +19,8 @@
 		},
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
+			"bundleIdentifier": "com.everDemand.shopMobileExpo",
+			"buildNumber": "0.4.3",
 			"supportsTablet": true
 		},
 		"androidStatusBar": {
@@ -26,6 +29,8 @@
 			"backgroundColor": "#00000000"
 		},
 		"android": {
+			"package": "com.everDemand.shopMobileExpo",
+			"versionCode": 1,
 			"adaptiveIcon": {
 				"foregroundImage": "./src/assets/img/appIcons/adaptive-icon.png",
 				"backgroundColor": "#2A2C39"
